fix for overflowing images in articles and clearing of floated content

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ audio:not([controls]) { display: none; height: 0; }
 html {
 	font-family: Cambria, Georgia, serif;
 	-webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
+  	-ms-text-size-adjust: 100%;
 }
 
 body {
@@ -106,6 +106,9 @@ a img.aligncenter {display: block; margin-left: auto; margin-right: auto }
 .sticky { }
 .bypostauthor { }
 
+article img {
+	max-width: 640px;
+}
 
 /* ----------------------------- defaults     ---------- */
 
@@ -252,6 +255,11 @@ nav.nav-single {
 	overflow: hidden;
 	box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
 	-webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
+}
+
+.entry-content {
+	clear: both;
+	overflow: hidden;
 }
 
 /* ----------------------------- comments     ---------- */
